# compact_schemes

./: CMakeLists.txt  LICENSE  README.md  config.yaml  env.sh
driver/: CMakeLists.txt  canard.cu  canard_rtc.cu
scripts/: job_levante_gpu
src/: CMakeLists.txt  IO.hpp  domdcomp.hpp  gcbc.hpp  grid.hpp  numerics.hpp  numerics_base.hpp  numerics_pc.hpp  numerics_rtc.hpp  physics.hpp  physics_base.hpp  physics_pc.hpp  physics_rtc.hpp
src/common/: data_types.hpp  nvtx_utils.hpp  parameters.hpp  utils.hpp
src/cuda/: check.hpp  check_rtc.hpp  common.hpp  compiler.hpp  dispatch.hpp  driver.hpp  gcbc.hpp  numerics.hpp  numerics_pc.hpp  physics.hpp
src/cuda/kernels/: common.hpp  definitions.hpp  functional.hpp  gcbc.hpp  numerics.hpp  numerics_device.hpp  numerics_device_pc.hpp  numerics_device_rtc.hpp  numerics_pc.hpp  numerics_rtc.hpp  physics.hpp  reductionShMem.hpp  templateShmem.hpp  transforms.hpp
src/host/: functional.hpp  transforms.hpp
src/mpi/: check.hpp  data_types.hpp  driver.hpp  exchange.hpp
tests/: CMakeLists.txt  test_numerics_serial.cu  test_physics.cu  test_physics_serial.cu  test_utils.hpp  test_utils_mpi.hpp
